<resources>
    <string name="app_name">Jun</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="more">More</string>
    <string name="action_settings">Settings</string>
    <string name="action_jobs">Experience</string>
    <string name="action_school">Education</string>
    <string name="action_bio">Autobiography</string>
    <string name="action_share">Share</string>
    <string name="action_contact">Contact</string>
    <string name="action_email">Send Email</string>
    <string name="action_signin">Sign In</string>
    <string name="action_signout">Sign Out</string>
    <string name="action_super">sudo</string>
    <string name="action_links">External Links</string>
    <string name="action_linkedin">LinkedIn</string>
    <string name="action_104">104.com.tw</string>
    <string name="action_github">GitHub</string>
</resources>
