<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_github"
            android:icon="@mipmap/ic_github"
            android:title="@string/action_github" />
        <item android:id="@+id/nav_jobs"
            android:icon="@drawable/ic_work_black_24dp"
            android:title="@string/action_jobs"/>
        <item android:id="@+id/nav_school"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/action_school" />
        <item android:id="@+id/nav_bio"
            android:icon="@drawable/ic_theaters_black_24dp"
            android:title="@string/action_bio"/>
    </group>
    <item android:title="@string/action_links">
        <menu>
            <item android:id="@+id/nav_linkedin"
                android:icon="@mipmap/ic_linkedin"
                android:title="@string/action_linkedin" />
            <item android:id="@+id/nav_104"
                android:icon="@mipmap/ic_104"
                android:title="@string/action_104" />
        </menu>
    </item>
    <item android:title="@string/action_super">
        <menu>
            <item android:id="@+id/nav_signin"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/action_signin"/>
            <item android:id="@+id/nav_signout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/action_signout" />
        </menu>
    </item>
</menu>
